--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="driver_title">State of the Art \n Driver Screen</string>
     <string name="route_title">State of the Art \n Route Screen</string>
     <string name="driver_list">List of Drivers:</string>
+    <string name="route_picked">You Selected:</string>
     <string name="route_button">Return to Driver Screen</string>
 </resources>
