2023-05-30 Add buildConfigField and resValue to buildtypes in build.gradle Make Retrofit API service an interface Use sortBy to sort Drivers list Update Readme Add compose button to print list of drivers to logcat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="route_picked">You Selected:</string>
     <string name="route_button">Return to Driver Screen</string>
+    <string name="print_button">Print out list of drivers</string>
     <string name="is_sorted">List isSorted = %1b</string>
     <string name="nav_instructions">Select any driver</string>
 </resources>
