--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">AndroidArchitectureExample</string>
-    <string name="driver_title">State of the Art \n Driver Screen</string>
-    <string name="route_title">State of the Art \n Route Screen</string>
+    <string name="driver_title">State of the Art Architecture \n Driver Screen</string>
+    <string name="route_title">State of the Art Architecture \n Route Screen</string>
     <string name="driver_list">List of Drivers:</string>
     <string name="route_list">List of Routes:</string>
 
     <string name="route_picked">You Selected:</string>
     <string name="route_button">Return to Driver Screen</string>
     <string name="print_button">Print out list of drivers</string>
-    <string name="is_sorted">List isSorted = %1b</string>
+    <string name="delete_button">Force remote fetch of Drivers and Routes</string>
+    <string name="is_sorted_label">Select FAB to toggle sort:</string>
+    <string name="is_sorted">List isSorted flag = %1s</string>
     <string name="nav_instructions">Select any driver</string>
 </resources>
