--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="route_picked">You Selected:</string>
     <string name="route_button">Return to Driver Screen</string>
     <string name="print_button">Print out list of drivers</string>
-    <string name="delete_button">Force remote fetch of Drivers and Routes</string>
+    <string name="delete_button">Delete Local Drivers and Routes</string>
+    <string name="reload_button">Force remote fetch of Drivers and Routes</string>
     <string name="clear_error_button">Clear Error</string>
     <string name="is_sorted_label">Select FAB to toggle sort:</string>
     <string name="is_sorted">List isSorted flag = %1s</string>
