--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     <string name="app_name">AndroidArchitectureExample</string>
-    <string name="driver_title">State of the Art Architecture \n Driver Screen</string>
-    <string name="route_title">State of the Art Architecture \n Route Screen</string>
-    <string name="driver_list">List of Drivers:</string>
-    <string name="route_list_label">List of Routes:</string>
+    <string name="dates_title">DEPT Interview \n Dates Screen</string>
+    <string name="route_title">Dept Interview \n Enhanced Dates Screen</string>
+    <string name="dates_list">List of Dates:</string>
+    <string name="route_list_label">List of Enhanced Dates:</string>
 
     <string name="route_picked">You Selected:</string>
-    <string name="route_navigate_button">Return to Driver Screen</string>
-    <string name="print_button">Print out list of drivers</string>
-    <string name="delete_button">Delete Local Drivers and Routes</string>
-    <string name="reload_button">Force remote fetch of Drivers and Routes</string>
+    <string name="route_navigate_button">Return to Dates Screen</string>
+    <string name="print_button">Print out list of dates</string>
+    <string name="delete_button">Delete Local Dates and Routes</string>
+    <string name="reload_button">Force remote fetch of Dates and Routes</string>
     <string name="clear_error_button">Clear Error</string>
     <string name="fab_label">Select FAB to toggle sort:</string>
     <string name="sorted_indicator">List isSorted flag = %1s</string>
-    <string name="select_driver">Select any driver</string>
-    <string name="no_drivers">No Drivers Available</string>
+    <string name="select_dates">Select any dates</string>
+    <string name="no_dates">No Dates Available</string>
 
-    <string name="test_driver_title">Test Architecture \n Driver Screen</string>
+    <string name="test_dates_title">Test Architecture \n Dates Screen</string>
     <string name="test_route_title">Test Architecture \n Route Screen</string>
     <string name="sort_button">Sort</string>
     <string name="build_resource_label">Build Type String Resource =</string>
